--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Домашняя</title>
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -37,11 +37,11 @@
         <div class="menu">
             <div class="container">
                 <ul>
-                    <li><a class="home__page" href="index.html">home</a></li>
-                    <li><a href="my-skills.html">my skills</a></li>
-                    <li><a href="#">portfolio</a></li>
-                    <li><a href="#">about me</a></li>
-                    <li><a href="#">my Life</a></li>
+                    <li><a class="home__page" href="index.html">домашняя</a></li>
+                    <li><a href="my-skills.html">навыки</a></li>
+                    <li><a href="#">портфолио</a></li>
+                    <li><a href="#">обо мне</a></li>
+                    <li><a href="#">жизнь</a></li>
                 </ul>
             </div>
 
