--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 
     <header class="header" id="header">
         <div class="menu">
+            <div class="menu__btn">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class="container">
                 <ul>
                     <li><a class="home__page" href="index.html">домашняя</a></li>
@@ -197,7 +202,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/bundle.js"></script>
 </body>
 
 </html>
