add media css with js animate buttons

--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
 
     <div class="social__link">
         <ul id="social__list-items" class="preloader__items">
-            <li class="social__item"><a href="https://t.me/yourbookk" target="_blank" class="telega"><img src="images/Telega.svg"
-                        alt=""></a></li>
-            <li class="social__item"><a href="https://github.com/AinoGG" target="_blank" class="telega"><img src="images/git.svg"
-                        alt=""></a></li>
+            <li class="social__item"><a href="https://t.me/yourbookk" target="_blank" class="telega"><img
+                        src="images/Telega.svg" alt=""></a></li>
+            <li class="social__item"><a href="https://github.com/AinoGG" target="_blank" class="telega"><img
+                        src="images/git.svg" alt=""></a></li>
             <li class="social__item"><a href="https://www.instagram.com/ainogg/" target="_blank" class="insta"><img
                         src="images/Instagram.svg" alt=""></a></li>
-            <li class="social__item"><a href="https://www.twitch.tv/ainogg" target="_blank" class="twitch"><img src="images/Twitch.svg"
-                        alt=""></a></li>
+            <li class="social__item"><a href="https://www.twitch.tv/ainogg" target="_blank" class="twitch"><img
+                        src="images/Twitch.svg" alt=""></a></li>
             <li class="social__item"><a href="https://twitter.com/Ryadomgg" target="_blank" class="twitter"><img
                         src="images/Twitter.svg" alt=""></a></li>
             <li class="social__item"><a href="https://www.youtube.com/channel/UC6rPut2DoLRf9y9hmx-XLeA" target="_blank"
                     class="youtube"><img src="images/youtube.svg" alt=""></a></li>
-            <li class="social__item"><a href="https://vk.com/ep.aino" target="_blank" class="vk"><img src="images/vk.svg" alt=""></a>
+            <li class="social__item"><a href="https://vk.com/ep.aino" target="_blank" class="vk"><img
+                        src="images/vk.svg" alt=""></a>
             </li>
         </ul>
     </div>
@@ -36,12 +37,15 @@
     <header class="header" id="header">
         <div class="menu">
             <div class="menu__btn">
+                Social
+            </div>
+            <div class="menu__btn-list">
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
             <div class="container">
-                <ul>
+                <ul class="menu__list">
                     <li><a class="home__page" href="index.html">домашняя</a></li>
                     <li><a href="my-skills.html">навыки</a></li>
                     <li><a href="#">портфолио</a></li>
@@ -76,7 +80,13 @@
                 можно будет увидеть какие-то моменты из моей жизни, видео с моих каналов на YouTube и Twitch.
             </span>
             <span class="main__content-text">
-                Сегодня 30.09.2020 и мне только, что пришлось клонировать проект с гита, потому что я его удалил, можно сказать случайно, но а пушил последний раз я вчера ночью, благо сегодня я не так много сделал. Обидно, что удалился текст, там я пытался выдать мысли по поводу проделанной работы. Но не будем унывать, теперь у меня есть больше текста, чтобы заполнить пространство. Страница с навыками закончена, самое время адаптировать ее под мобилы. Там я писал, что не буду рефакторить CSS и что всё будет в одном файле без импортов, но "медиа" я все-таки делать в отдельном файле. Сейчас 19:31 Жена едет с работы, пойду ее встречать. Приду и запилю адаптив, позже отпишусь, отчитаюсь. МИР
+                Сегодня 30.09.2020 и мне только, что пришлось клонировать проект с гита, потому что я его удалил, можно
+                сказать случайно, но а пушил последний раз я вчера ночью, благо сегодня я не так много сделал. Обидно,
+                что удалился текст, там я пытался выдать мысли по поводу проделанной работы. Но не будем унывать, теперь
+                у меня есть больше текста, чтобы заполнить пространство. Страница с навыками закончена, самое время
+                адаптировать ее под мобилы. Там я писал, что не буду рефакторить CSS и что всё будет в одном файле без
+                импортов, но "медиа" я все-таки делать в отдельном файле. Сейчас 19:31 Жена едет с работы, пойду ее
+                встречать. Приду и запилю адаптив, позже отпишусь, отчитаюсь. МИР
             </span>
 
 
@@ -88,9 +98,8 @@
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/libs.min.js"></script>
-    <script src="../js/bundle.js"></script>
+
+    <script src="js/indexhtml.js"></script>
 </body>
 
 </html>
