--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
                 импортов, но "медиа" я все-таки делать в отдельном файле. Сейчас 19:31 Жена едет с работы, пойду ее
                 встречать. Приду и запилю адаптив, позже отпишусь, отчитаюсь. МИР
             </span>
+            <span class="main__content-text">
+                Сегодня 01.10.2020. Новый месяц, кто нибудь разбудите GreenDay. Адаптировал под маленькие экраны главную страницу, завтра сделаю страницу со скилами. На часах 22:33 и мысли не лезут в голову. Сегодня я сделал больше чем обычно, но писать как-то не хочется. Наверное это оставит не очень хорошее впечатление, типа что я оставляю все на потом, пусть будет так. До завтра
+            </span>
 
 
 
