--- a/my-skills.html
+++ b/my-skills.html
@@ -13,8 +13,13 @@
 
     <header class="header">
         <div class="menu">
+            <div class="menu__btn-list">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class="container">
-                <ul>
+                <ul class="menu__list">
                     <li><a class="home__page" href="index.html">домашняя</a></li>
                     <li><a href="my-skills.html">навыки</a></li>
                     <li><a href="#">портфолио</a></li>
@@ -38,13 +43,13 @@
             <div class="main__content-title text__before">
                 <h2>Практические навыки</h2>
             </div>
-            <p class="main__content-text">
+            <span>
                 Здесь я опишу то, чему научился на курсах, покажу те решения, которые есть в моем арсенале, возможно это
                 слишком громко звучит, это будут обычные: табы, счетчик, модальные окна, калькулятор, слайдер .. Всё то,
                 что
                 в основном требуется в коммерческой разработке. Потенциальный работодатель сможет посмотреть код и
                 оценить мои навыки, поехали.
-            </p>
+            </span>
         </div>
 
         <div class="tabs__section">
@@ -248,6 +253,7 @@
 
 
     <script src="../js/bundle.js"></script>
+    
 </body>
 
 </html>
