--- a/my-skills.html
+++ b/my-skills.html
@@ -152,16 +152,16 @@
                     <div class="offer__slider-wrapper">
                         <div class="offer__slider-inner">
                             <div class="offer__slide">
-                                <img src="images/slider/slider__item1.jpg" alt="pepper">
+                                <img src="images/slider/slider__item1.jpg" alt="normal">
                             </div>
                             <div class="offer__slide">
-                                <img src="images/slider/slider__item2.jpg" alt="food">
+                                <img src="images/slider/slider__item2.jpg" alt="remote">
                             </div>
                             <div class="offer__slide">
-                                <img src="images/slider/slider__item3.jpg" alt="oil">
+                                <img src="images/slider/slider__item3.jpg" alt="normal2">
                             </div>
                             <div class="offer__slide">
-                                <img src="images/slider/slider__item4.jpg" alt="paprika">
+                                <img src="images/slider/slider__item4.jpg" alt="remote2">
                             </div>
                         </div>
                     </div>
