add portfolio page, and add post by 071020

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <ul class="menu__list">
                     <li><a class="home__page" href="index.html">домашняя</a></li>
                     <li><a href="my-skills.html">навыки</a></li>
-                    <li><a href="#">портфолио</a></li>
+                    <li><a href="portfolio.html">портфолио</a></li>
                     <li><a href="#">обо мне</a></li>
                     <li><a href="#">жизнь</a></li>
                 </ul>
@@ -75,10 +75,16 @@
                 <h2>Заголовок</h2>
             </div>
             <span class="main__content-text">
-                Этот блог, можно считать началом моей карьеры в web’е. Здесь я смогу поделиться своими навыками
-                с будущими работодателями. По мере моего роста список этих навыков будет расширяться. Так же здесь
-                можно будет увидеть какие-то моменты из моей жизни, видео с моих каналов на YouTube и Twitch.
+                Уже 7 октября 2020 года, Решил немного написать сюда. Адаптацию под мобильные устройсва закончил еще пару дней назад, теперь думаю как оформить остальные страницы. Пока из всего сайта работают только две основные страницы и я уже активнее рассылаю резюме, но результатов пока нет. Это понятно, ведь на носу вторая волна пандемии и усиление кризиса из-за этого. Скорее всего компании отложили прием новых сотрудников на работу, до более стабильного времени. Для меня это возможность продолжить обучение и доделать этот проект. Немного пересмотрел главную и теперь буду новые посты ставить вначале, несколько человек сказали, что шрифты слишком большие и я это понимаю. Это сделано для того, чтобы сайт казался наполненным, потому что если шрифты будут мелкими текста пока слишком мало. Так же нужно оформить каждый пост в стилистике блога, и хорошо что я пишу это здесь, буду видеть что нужно сделать если вдруг словлю ступор. Давно хотел написать, но были другие дела. Всем добра 
             </span>
+
+            <span class="main__content-text">
+                Сегодня 01.10.2020. Новый месяц, кто нибудь разбудите GreenDay. Адаптировал под маленькие экраны главную
+                страницу, завтра сделаю страницу со скилами. На часах 22:33 и мысли не лезут в голову. Сегодня я сделал
+                больше чем обычно, но писать как-то не хочется. Наверное это оставит не очень хорошее впечатление, типа
+                что я оставляю все на потом, пусть будет так. До завтра
+            </span>
+
             <span class="main__content-text">
                 Сегодня 30.09.2020 и мне только, что пришлось клонировать проект с гита, потому что я его удалил, можно
                 сказать случайно, но а пушил последний раз я вчера ночью, благо сегодня я не так много сделал. Обидно,
@@ -88,9 +94,14 @@
                 импортов, но "медиа" я все-таки делать в отдельном файле. Сейчас 19:31 Жена едет с работы, пойду ее
                 встречать. Приду и запилю адаптив, позже отпишусь, отчитаюсь. МИР
             </span>
+
             <span class="main__content-text">
-                Сегодня 01.10.2020. Новый месяц, кто нибудь разбудите GreenDay. Адаптировал под маленькие экраны главную страницу, завтра сделаю страницу со скилами. На часах 22:33 и мысли не лезут в голову. Сегодня я сделал больше чем обычно, но писать как-то не хочется. Наверное это оставит не очень хорошее впечатление, типа что я оставляю все на потом, пусть будет так. До завтра
+                Этот блог, можно считать началом моей карьеры в web’е. Здесь я смогу поделиться своими навыками
+                с будущими работодателями. По мере моего роста список этих навыков будет расширяться. Так же здесь
+                можно будет увидеть какие-то моменты из моей жизни, видео с моих каналов на YouTube и Twitch.
             </span>
+
+
 
 
 
