--- a/my-skills.html
+++ b/my-skills.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My skills</title>
+    <title>Навыки</title>
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -22,7 +22,7 @@
                 <ul class="menu__list">
                     <li><a class="home__page" href="index.html">домашняя</a></li>
                     <li><a href="my-skills.html">навыки</a></li>
-                    <li><a href="#">портфолио</a></li>
+                    <li><a href="portfolio.html">портфолио</a></li>
                     <li><a href="#">обо мне</a></li>
                     <li><a href="#">жизнь</a></li>
                 </ul>
