add meatloft portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,10 +38,46 @@
                 <h2>То, что успел</h2>
             </div>
             <span>
-                Здесь я выложу свой опыт, то что я успел сделать за время учебы. Это не учебные проекты, это бесплатные макеты из интернета, один коммерческий проект и собственный проект сделанный в Figma с нуля. Чтож посмотрим . . . 
+                Здесь я выложу свой опыт, то что я успел сделать за время учебы. Это не учебные проекты, это бесплатные
+                макеты из интернета, один коммерческий проект и собственный проект сделанный в Figma с нуля. Чтож
+                посмотрим . . .
             </span>
+
+
+            <div class="portfolio__inner">
+                <div class="portfolio__item-box">
+
+                    <a href="meatloft/index.html" class="portfolio__link" target="_blank">
+                        <div class="portfolio-title">MeatLoft</div>
+                        <img src="images/portfolio/meatLoft1.jpg" alt="">
+                    </a>
+                </div>
+                <div class="portfolio__item-box">
+
+                    <a href="https://osteop.feyazub.ru/" class="portfolio__link" target="_blank">
+                        <div class="portfolio-title">Зубная Фея</div>
+                        <img src="images/portfolio/feyazub1.jpg" alt="">
+                    </a>
+                </div>
+                <div class="portfolio__item-box">
+
+                    <a href="apartComplex/index.html" class="portfolio__link" target="_blank">
+                        <div class="portfolio-title">Apartments</div>
+                        <img src="images/portfolio/apart1.jpg" alt="">
+                    </a>
+                </div>
+                <div class="portfolio__item-box">
+
+                    <a href="covid/index.html" class="portfolio__link" target="_blank">
+                        <div class="portfolio-title">COVID-19</div>
+                        <img src="images/portfolio/covid1.jpg" alt="">
+                    </a>
+                </div>
+            </div>
+
+
         </div>
-        </div>
+    </div>
 
 
 
