--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
             <div class="portfolio__inner">
                 <div class="portfolio__item-box">
 
-                    <a href="meatloft/index.html" class="portfolio__link" target="_blank">
+                    <a href="MeatLoft/index.html" class="portfolio__link" target="_blank">
                         <div class="portfolio-title">MeatLoft</div>
                         <img src="images/portfolio/meatLoft1.jpg" alt="">
                     </a>
