--- a/MeatLoft/index.html
+++ b/MeatLoft/index.html
@@ -66,7 +66,7 @@
                     <div class="container">
                         <h1 class="mainframe__title">Ешь вовремя</h1>
                         <div class="mainframe__inner">
-                            <div class="mainframe__img" style="background-image: url(../images/time1.png);"></div>
+                            <div class="mainframe__img" style="background-image: url(../MeatLoft/images/time1.png);"></div>
                             <div class="mainframe__text"><span>Своевременная доставка.</span>
                                 <span>За счет собственнных курьеров</span>
                                 <span>доставляем быстрее</span>
@@ -83,7 +83,7 @@
                     <div class="container">
                         <h1 class="mainframe__title">Почувствуй атмосферу</h1>
                         <div class="mainframe__inner">
-                            <div class="mainframe__img" style="background-image: url(../images/cup.png);"></div>
+                            <div class="mainframe__img" style="background-image: url(../MeatLoft/images/cup.png);"></div>
                             <div class="mainframe__text"><span>Окунитесь в уютную атмосферу “лофта”.</span>
                                 <span> В компании друзей или</span>
                                 <span>в уединении с собой под приятную музыку</span>
@@ -115,7 +115,7 @@
                 <div class="menu__rest-left wow bounceInLeft" data-wow-offset:1080px data-wow-delay=.5s>
                     <div class="menu__rest-item">
                         <div class="menu__rest-item__image">
-                            <img src="../images/menu/chefbrgr.png" alt="">
+                            <img src="../MeatLoft/images/menu/chefbrgr.png" alt="">
                         </div>
                         <div class="menu__rest-item__description">
                             <h3 class="menu__rest-item__title">МитЛофт-шеф</h3>
@@ -133,7 +133,7 @@
                     </div>
                     <div class="menu__rest-item two-item">
                         <div class="menu__rest-item__image two-image">
-                            <img src="../images/menu/twohalf.png" alt="">
+                            <img src="../MeatLoft/images/menu/twohalf.png" alt="">
                         </div>
                         <div class="menu__rest-item__description">
                             <h3 class="menu__rest-item__title two-title">Солёная парочка</h3>
@@ -141,9 +141,9 @@
                                     style="color: #DF9E49;">булочка</span> с кунжутом,
                                 ломтики
                                 <span style="color: #B13B21;">бекона</span>, <span
-                                    style="background-image: url(../images/menu/double.png); background-repeat: no-repeat;">двойная</span>
+                                    style="background-image: url(../MeatLoft/images/menu/double.png); background-repeat: no-repeat;">двойная</span>
                                 <span
-                                    style="color: #8A2421; background-image: url(../images/menu/cow.png); background-repeat: no-repeat; background-position: left center;">говяжья
+                                    style="color: #8A2421; background-image: url(../MeatLoft/images/menu/cow.png); background-repeat: no-repeat; background-position: left center;">говяжья
                                     котлета</span> залитая <span style="color: #D89919;">сыром</span> с двух сторон,
                                 все это под фирменным <span style="color: #CA9023;">сырным соусом</span> и поделено на
                                 две равные половинки
@@ -163,7 +163,7 @@
                                 <span style="color: #C9C1AB;">лук</span>,
                                 <span style="color: #DB3E1B;">томат,</span> <span style="color: #658120;">листья
                                     салата,</span><span style="color: #ECC443;">сыр чеддер</span> на <span
-                                    style="background-image: url(../images/menu/double1.png); background-repeat: no-repeat;">двойной</span>
+                                    style="background-image: url(../MeatLoft/images/menu/double1.png); background-repeat: no-repeat;">двойной</span>
                                 <span style="color: #845F3D;">куриной котлете</span> с двух сторон,
                                 все это под фирменным <span style="color: #FAEFDC;">сливочным</span> и <span
                                     style="color: #AB9686;">чесночным</span> соусами
@@ -171,7 +171,7 @@
                             </div>
                         </div>
                         <div class="menu__rest-item__image three__image">
-                            <img src="../images/menu/chikenburger.png" alt="">
+                            <img src="../MeatLoft/images/menu/chikenburger.png" alt="">
                             <div class="menu__rest-item__price" style="text-align: right;">~700г.</div>
                         </div>
 
@@ -194,7 +194,7 @@
                             </div>
                         </div>
                         <div class="menu__rest-item__image four-image">
-                            <img src="../images/menu/defaultburger.png" alt="">
+                            <img src="../MeatLoft/images/menu/defaultburger.png" alt="">
                         </div>
                     </div>
                 </div>
