--- a/portfolio.html
+++ b/portfolio.html
@@ -51,6 +51,9 @@
                         <div class="portfolio-title">MeatLoft</div>
                         <img src="images/portfolio/meatLoft1.jpg" alt="">
                     </a>
+                    <span>
+                        Личный проект, в котором пришлось поработать дизайнером. На втором экране слайдера скрин из игры GTA5, для этого скрина пришлось зайти в магазин одежды, выбрать что-то похожее на одежду курьера, потом заказать велосипед в интернет-магазине и поездить по городу поискать подходящий городской пейзаж. Ну это так, немного разнообразия в работе.
+                    </span>
                 </div>
                 <div class="portfolio__item-box">
 
@@ -58,6 +61,9 @@
                         <div class="portfolio-title">Зубная Фея</div>
                         <img src="images/portfolio/feyazub1.jpg" alt="">
                     </a>
+                    <span>
+                        Коммерческий проект, сразу после курса верстальщика прошел стажировку в monomoloco-team, ребята доверили несрочный проект, сложность проекта была в собственной CSS библиотеке, так команда ускоряла свою работу в несколько раз, создавая макеты и верстая по собственным сеткам. Интересный опыт.
+                    </span>
                 </div>
                 <div class="portfolio__item-box">
 
@@ -65,6 +71,9 @@
                         <div class="portfolio-title">Apartments</div>
                         <img src="images/portfolio/apart1.jpg" alt="">
                     </a>
+                    <span>
+                        Данный макет нашел на просторах интернета, в тот момент когда я его верстал, в Figma видно было как еще несколько человек одновременно изучают этот макет, возможно его можно встретить в портфолио не только у меня. Данную верстку "натягивал" на WordPress, в планах квартир использовал fancybox плагин
+                    </span>
                 </div>
                 <div class="portfolio__item-box">
 
@@ -72,6 +81,10 @@
                         <div class="portfolio-title">COVID-19</div>
                         <img src="images/portfolio/covid1.jpg" alt="">
                     </a>
+                    <span>
+                        Во время карантина хотелось сверстать что-то актуальное, нашел бесплатный макет о COVID-19 сверстал, и в конце сайта подключил статистику со стороннего сервиса, немного анимировал круглые элементы на сайте.
+                    </span>
+        
                 </div>
             </div>
 
