--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                 <h2>Заголовок</h2>
             </div>
             <span class="main__content-text">
+                Иногда стоит, что-то сделать, чтобы понять - это ничего не стоит, твои знания жалкие и убогие. Но я стану лучше, не всех такое понимание мотивирует, похоже предстоит сделать много работы. Нужна перезагрузка . . . 12.10.2020
+            </span>
+            <span class="main__content-text">
                 Уже 7 октября 2020 года, Решил немного написать сюда. Адаптацию под мобильные устройсва закончил еще пару дней назад, теперь думаю как оформить остальные страницы. Пока из всего сайта работают только две основные страницы и я уже активнее рассылаю резюме, но результатов пока нет. Это понятно, ведь на носу вторая волна пандемии и усиление кризиса из-за этого. Скорее всего компании отложили прием новых сотрудников на работу, до более стабильного времени. Для меня это возможность продолжить обучение и доделать этот проект. Немного пересмотрел главную и теперь буду новые посты ставить вначале, несколько человек сказали, что шрифты слишком большие и я это понимаю. Это сделано для того, чтобы сайт казался наполненным, потому что если шрифты будут мелкими текста пока слишком мало. Так же нужно оформить каждый пост в стилистике блога, и хорошо что я пишу это здесь, буду видеть что нужно сделать если вдруг словлю ступор. Давно хотел написать, но были другие дела. Всем добра 
             </span>
 
