--- a/index.html
+++ b/index.html
@@ -75,10 +75,36 @@
                 <h2>Заголовок</h2>
             </div>
             <span class="main__content-text">
-                Иногда стоит, что-то сделать, чтобы понять - это ничего не стоит, твои знания жалкие и убогие. Но я стану лучше, не всех такое понимание мотивирует, похоже предстоит сделать много работы. Нужна перезагрузка . . . 12.10.2020
+                Йо, нужно что-то написать здесь, все-таки это блог. Сегодня гулял в парке, отличная погода и подкаст
+                "Веб-стандарты" в наушниках сделали прогулку не скучной и продуктивной. В прошлом посте писал про
+                перезагрузку и вот, решился в очередной раз сбрить волосы и бороду(хотя борода тоже волосы). Чувствую
+                себя по-новому, свежая голова как будто лучше варит. Сейчас вернулся к Реакту, читаю книгу Алекса Бэнкса
+                и Евы Порселло, которую я купил еще весной, но руки дошли только сейчас, когда кажется, что уже все
+                доделал и можно вернуться к обучению. Но на самом деле ничего я еще не доделал. Полно доработок уже
+                созданных страниц ждет меня, например - сжатие картинок. По приколу закинул сайт в PageSpeed и как раз
+                на картинки он поругался. Потом адаптировать под мобилы кое-что. В общем нужно выделить день на
+                доработку. А, ну и добавить остальные страницы, не помню что я хотел добавить в страницу под названием
+                "Жизнь", видимо что-то грандиозное. Покидал резюмехи на Hh и на Хабре, надо вникнуть поглубже в
+                анимацию, вижу запрос работодателей на таких специалистов, тема интересная и не очень сложная, тем более
+                я уже посмотрел одну конференцию посвященную анимации и пару туториалов по GSAP. В общем, когда говорили
+                что придется постоянно учиться - не соврали. Всем мир. 15.10.2020
             </span>
             <span class="main__content-text">
-                Уже 7 октября 2020 года, Решил немного написать сюда. Адаптацию под мобильные устройсва закончил еще пару дней назад, теперь думаю как оформить остальные страницы. Пока из всего сайта работают только две основные страницы и я уже активнее рассылаю резюме, но результатов пока нет. Это понятно, ведь на носу вторая волна пандемии и усиление кризиса из-за этого. Скорее всего компании отложили прием новых сотрудников на работу, до более стабильного времени. Для меня это возможность продолжить обучение и доделать этот проект. Немного пересмотрел главную и теперь буду новые посты ставить вначале, несколько человек сказали, что шрифты слишком большие и я это понимаю. Это сделано для того, чтобы сайт казался наполненным, потому что если шрифты будут мелкими текста пока слишком мало. Так же нужно оформить каждый пост в стилистике блога, и хорошо что я пишу это здесь, буду видеть что нужно сделать если вдруг словлю ступор. Давно хотел написать, но были другие дела. Всем добра 
+                Иногда стоит, что-то сделать, чтобы понять - это ничего не стоит, твои знания жалкие и убогие. Но я
+                стану лучше, не всех такое понимание мотивирует, похоже предстоит сделать много работы. Нужна
+                перезагрузка . . . 12.10.2020
+            </span>
+            <span class="main__content-text">
+                Уже 7 октября 2020 года, Решил немного написать сюда. Адаптацию под мобильные устройсва закончил еще
+                пару дней назад, теперь думаю как оформить остальные страницы. Пока из всего сайта работают только две
+                основные страницы и я уже активнее рассылаю резюме, но результатов пока нет. Это понятно, ведь на носу
+                вторая волна пандемии и усиление кризиса из-за этого. Скорее всего компании отложили прием новых
+                сотрудников на работу, до более стабильного времени. Для меня это возможность продолжить обучение и
+                доделать этот проект. Немного пересмотрел главную и теперь буду новые посты ставить вначале, несколько
+                человек сказали, что шрифты слишком большие и я это понимаю. Это сделано для того, чтобы сайт казался
+                наполненным, потому что если шрифты будут мелкими текста пока слишком мало. Так же нужно оформить каждый
+                пост в стилистике блога, и хорошо что я пишу это здесь, буду видеть что нужно сделать если вдруг словлю
+                ступор. Давно хотел написать, но были другие дела. Всем добра
             </span>
 
             <span class="main__content-text">
