just upd styles
add post on mainpage
add responsive style on portfoliopage
minor change style on posts in mainpage

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
     <div class="social__link">
         <ul id="social__list-items" class="preloader__items">
             <li class="social__item"><a href="https://t.me/yourbookk" target="_blank" class="telega"><img
@@ -75,6 +74,10 @@
                 <h2>Заголовок</h2>
             </div>
             <span class="main__content-text">
+                Адаптировал "портфолио", в этот раз медиа прописывал именно в стилях портфолио, так удобнее, и вроде как все равно все в один файл собирается, так что норм. Сейчас сделаю новый формат даты, чтобы смотрелось как настоящий блог. Прошла третья неделя поиска работы. Просмотры есть, а приглашений нет. Отказов вроде тоже нет, возможно откладывают чтобы посмотреть еще кандидатов, типа: а можно всех посмотреть? (шутка). Погода испортилась и гулять уже не хочется. PEACE
+                <div class="today">16.10.2020</div>
+            </span>
+            <span class="main__content-text">
                 Йо, нужно что-то написать здесь, все-таки это блог. Сегодня гулял в парке, отличная погода и подкаст
                 "Веб-стандарты" в наушниках сделали прогулку не скучной и продуктивной. В прошлом посте писал про
                 перезагрузку и вот, решился в очередной раз сбрить волосы и бороду(хотя борода тоже волосы). Чувствую
@@ -129,14 +132,7 @@
                 с будущими работодателями. По мере моего роста список этих навыков будет расширяться. Так же здесь
                 можно будет увидеть какие-то моменты из моей жизни, видео с моих каналов на YouTube и Twitch.
             </span>
-
-
-
-
-
-
         </div>
-
     </div>
 
 
