--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,13 @@
 
     <header class="header">
         <div class="menu">
+            <div class="menu__btn-list">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class="container">
-                <ul>
+                <ul class="menu__list">
                     <li><a class="home__page" href="index.html">домашняя</a></li>
                     <li><a href="my-skills.html">навыки</a></li>
                     <li><a href="portfolio.html">портфолио</a></li>
@@ -94,9 +99,8 @@
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/libs.min.js"></script>
-    <script src="js/main.js"></script>
+    
+    <script src="js/port.js"></script>
 </body>
 
 </html>
