--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                 <h2>Заголовок</h2>
             </div>
             <span class="main__content-text">
+                Понедельник день тяжелый? не для всех и не всегда. Для тех кто любит свою работу, понедельник это замечательный день. Вернуться к делам, которые тебя вдохновляют - всегда приятно. Я хочу работать и приносить пользу обществу, вкладывать в экономику свои силы и я обязательно к этому приду и не перед чем не остановлюсь. Сегодня по плану пройтись послушать новый подкаст Веб-стандарты. В пятницу улетаю в Уфу на пару дней, встречусь с друзьями, наберусь вдохновения, почувствую вкус жизни и вернусь обновленным. Возможно заведу какие-то знакомства в дороге, ну да ладно, загадывать не будем. Всех обнял
+                <div class="today">19.10.2020</div>
+            </span>
+            <span class="main__content-text">
                 Адаптировал "портфолио", в этот раз медиа прописывал именно в стилях портфолио, так удобнее, и вроде как все равно все в один файл собирается, так что норм. Сейчас сделаю новый формат даты, чтобы смотрелось как настоящий блог. Прошла третья неделя поиска работы. Просмотры есть, а приглашений нет. Отказов вроде тоже нет, возможно откладывают чтобы посмотреть еще кандидатов, типа: а можно всех посмотреть? (шутка). Погода испортилась и гулять уже не хочется. PEACE
                 <div class="today">16.10.2020</div>
             </span>
