--- a/index.html
+++ b/index.html
@@ -71,8 +71,12 @@
     <div class="main">
         <div class="container">
             <div class="main__content-title">
-                <h2>Заголовок</h2>
+                <h2>Блог</h2>
             </div>
+            <span class="main__content-text">
+                Предпоследний день октября, так символично, вроде еще не конец, возможно успеть что-то сделать. Но еще вчера я решил закончить работу над этим проектом. Ничего путного не получилось, ни одного приглашения на собес я так и не получил. Тем лучше для меня, буду делать следующий проект, хочу попробовать всё же пофрилансить поискать заказы и поработать на себя. В конце концов изначально цель моей учебы была свобода, свобода выбора, свобода сна, свобода личности. Я не добился этого, лишь паразитирую на теле своей любимой. Здесь буду продолжать писать иногда, все равно писать мне больше негде, тут это хотя бы никто не прочитает. Ну а тем кто читает - МИР
+                <div class="today">30.10.2020</div>
+            </span>
             <span class="main__content-text">
                 Понедельник день тяжелый? не для всех и не всегда. Для тех кто любит свою работу, понедельник это замечательный день. Вернуться к делам, которые тебя вдохновляют - всегда приятно. Я хочу работать и приносить пользу обществу, вкладывать в экономику свои силы и я обязательно к этому приду и не перед чем не остановлюсь. Сегодня по плану пройтись послушать новый подкаст Веб-стандарты. В пятницу улетаю в Уфу на пару дней, встречусь с друзьями, наберусь вдохновения, почувствую вкус жизни и вернусь обновленным. Возможно заведу какие-то знакомства в дороге, ну да ладно, загадывать не будем. Всех обнял
                 <div class="today">19.10.2020</div>
