--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,16 @@
 
 
             <div class="portfolio__inner">
+                 <div class="portfolio__item-box">
+
+                    <a href="motivate/index.html" class="portfolio__link" target="_blank">
+                        <div class="portfolio-title">Motivate</div>
+                        <img src="images/portfolio/motivate.jpg" alt="">
+                    </a>
+                    <span>
+                       Одна из последних работ, макет брал на просторах телеграм каналов. Адаптивная верстка с использованием "медиа-запросов", без макета для адаптива. Модальное окно при клике на кнопку.
+                    </span>
+                </div>
                 <div class="portfolio__item-box">
 
                     <a href="MeatLoft/index.html" class="portfolio__link" target="_blank">
