--- a/index.html
+++ b/index.html
@@ -74,15 +74,54 @@
                 <h2>Блог</h2>
             </div>
             <span class="main__content-text">
-                Предпоследний день октября, так символично, вроде еще не конец, возможно успеть что-то сделать. Но еще вчера я решил закончить работу над этим проектом. Ничего путного не получилось, ни одного приглашения на собес я так и не получил. Тем лучше для меня, буду делать следующий проект, хочу попробовать всё же пофрилансить поискать заказы и поработать на себя. В конце концов изначально цель моей учебы была свобода, свобода выбора, свобода сна, свобода личности. Я не добился этого, лишь паразитирую на теле своей любимой. Здесь буду продолжать писать иногда, все равно писать мне больше негде, тут это хотя бы никто не прочитает. Ну а тем кто читает - МИР
+                Прошло много времени.. Теперь я знаю СИ =) на начальном уровне, но все же. Спасибо Школе21 от Сбера.
+                Ровно 10 дней назад закончился мой "бассейн", где я познакомился с кучей интересных людей, смог
+                выбраться из плена прокрастинации и зоны комфорта, обрел мощь которая и не снилась моему отцу xD За этот
+                месяц будто научился учиться по-новому и готов поглащать знания. Теперь JS и React не кажутся такими
+                сложными. В общем еще раз спасибо за этот опыт. Что касается настоящего, то сейчас я делаю проект на
+                Реакте по уроку, очень круто всё разжовывает автор (Archakov Blog) Думаю много для себя вынесу из его
+                видосов. Как-то хотелось больше всего написать и раскрыться, но по итогу не лезет в голову ничего, так
+                что всем МИР!
+                <div class="today">12.07.2020</div>
+                <div class="flex__image-box">
+                    <img class="finishphoto" src="/AinoGG.github.io/images/main/21/finishphoto.jpg" alt="">
+                    <div class="flex__image-minibox">
+                        <div class="flex__image-double">
+                            <img src="/AinoGG.github.io/images/main/21/borntocode.jpg" alt="" width="">
+                            <img style="margin-left: 15px;" src="/AinoGG.github.io/images/main/21/myline.jpg" alt="">
+                            <img id="void-place" src="/AinoGG.github.io/images/main/21/voidplace.jpg" alt="">
+                        </div>
+                        <img class="meinred" src="/AinoGG.github.io/images/main/21/meinred.jpg" alt="">
+                        <span>PLUSULTRA</span>
+                    </div>
+                    
+                </div>
+            </span>
+            <span class="main__content-text">
+                Предпоследний день октября, так символично, вроде еще не конец, возможно успеть что-то сделать. Но еще
+                вчера я решил закончить работу над этим проектом. Ничего путного не получилось, ни одного приглашения на
+                собес я так и не получил. Тем лучше для меня, буду делать следующий проект, хочу попробовать всё же
+                пофрилансить поискать заказы и поработать на себя. В конце концов изначально цель моей учебы была
+                свобода, свобода выбора, свобода сна, свобода личности. Я не добился этого, лишь паразитирую на теле
+                своей любимой. Здесь буду продолжать писать иногда, все равно писать мне больше негде, тут это хотя бы
+                никто не прочитает. Ну а тем кто читает - МИР
                 <div class="today">30.10.2020</div>
             </span>
             <span class="main__content-text">
-                Понедельник день тяжелый? не для всех и не всегда. Для тех кто любит свою работу, понедельник это замечательный день. Вернуться к делам, которые тебя вдохновляют - всегда приятно. Я хочу работать и приносить пользу обществу, вкладывать в экономику свои силы и я обязательно к этому приду и не перед чем не остановлюсь. Сегодня по плану пройтись послушать новый подкаст Веб-стандарты. В пятницу улетаю в Уфу на пару дней, встречусь с друзьями, наберусь вдохновения, почувствую вкус жизни и вернусь обновленным. Возможно заведу какие-то знакомства в дороге, ну да ладно, загадывать не будем. Всех обнял
+                Понедельник день тяжелый? не для всех и не всегда. Для тех кто любит свою работу, понедельник это
+                замечательный день. Вернуться к делам, которые тебя вдохновляют - всегда приятно. Я хочу работать и
+                приносить пользу обществу, вкладывать в экономику свои силы и я обязательно к этому приду и не перед чем
+                не остановлюсь. Сегодня по плану пройтись послушать новый подкаст Веб-стандарты. В пятницу улетаю в Уфу
+                на пару дней, встречусь с друзьями, наберусь вдохновения, почувствую вкус жизни и вернусь обновленным.
+                Возможно заведу какие-то знакомства в дороге, ну да ладно, загадывать не будем. Всех обнял
                 <div class="today">19.10.2020</div>
             </span>
             <span class="main__content-text">
-                Адаптировал "портфолио", в этот раз медиа прописывал именно в стилях портфолио, так удобнее, и вроде как все равно все в один файл собирается, так что норм. Сейчас сделаю новый формат даты, чтобы смотрелось как настоящий блог. Прошла третья неделя поиска работы. Просмотры есть, а приглашений нет. Отказов вроде тоже нет, возможно откладывают чтобы посмотреть еще кандидатов, типа: а можно всех посмотреть? (шутка). Погода испортилась и гулять уже не хочется. PEACE
+                Адаптировал "портфолио", в этот раз медиа прописывал именно в стилях портфолио, так удобнее, и вроде как
+                все равно все в один файл собирается, так что норм. Сейчас сделаю новый формат даты, чтобы смотрелось
+                как настоящий блог. Прошла третья неделя поиска работы. Просмотры есть, а приглашений нет. Отказов вроде
+                тоже нет, возможно откладывают чтобы посмотреть еще кандидатов, типа: а можно всех посмотреть? (шутка).
+                Погода испортилась и гулять уже не хочется. PEACE
                 <div class="today">16.10.2020</div>
             </span>
             <span class="main__content-text">
