--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
                 что всем МИР!
                 <div class="today">12.07.2020</div>
                 <div class="flex__image-box">
-                    <img class="finishphoto" src="/AinoGG.github.io/images/main/21/finishphoto.jpg" alt="">
+                    <img class="finishphoto" src="/images/main/21/finishphoto.jpg" alt="">
                     <div class="flex__image-minibox">
                         <div class="flex__image-double">
-                            <img src="/AinoGG.github.io/images/main/21/borntocode.jpg" alt="" width="">
-                            <img style="margin-left: 15px;" src="/AinoGG.github.io/images/main/21/myline.jpg" alt="">
-                            <img id="void-place" src="/AinoGG.github.io/images/main/21/voidplace.jpg" alt="">
+                            <img src="/images/main/21/borntocode.jpg" alt="" width="">
+                            <img style="margin-left: 15px;" src="/images/main/21/myline.jpg" alt="">
+                            <img id="void-place" src="/images/main/21/voidplace.jpg" alt="">
                         </div>
-                        <img class="meinred" src="/AinoGG.github.io/images/main/21/meinred.jpg" alt="">
+                        <img class="meinred" src="/images/main/21/meinred.jpg" alt="">
                         <span>PLUSULTRA</span>
                     </div>
                     
