--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 Прошло много времени.. Теперь я знаю СИ =) на начальном уровне, но все же. Спасибо Школе21 от Сбера.
                 Ровно 10 дней назад закончился мой "бассейн", где я познакомился с кучей интересных людей, смог
                 выбраться из плена прокрастинации и зоны комфорта, обрел мощь которая и не снилась моему отцу xD За этот
-                месяц будто научился учиться по-новому и готов поглащать знания. Теперь JS и React не кажутся такими
+                месяц будто научился учиться по-новому и теперь готов поглащать знания. Теперь JS и React не кажутся такими
                 сложными. В общем еще раз спасибо за этот опыт. Что касается настоящего, то сейчас я делаю проект на
                 Реакте по уроку, очень круто всё разжовывает автор (Archakov Blog) Думаю много для себя вынесу из его
                 видосов. Как-то хотелось больше всего написать и раскрыться, но по итогу не лезет в голову ничего, так
