--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 сложными. В общем еще раз спасибо за этот опыт. Что касается настоящего, то сейчас я делаю проект на
                 Реакте по уроку, очень круто всё разжовывает автор (Archakov Blog) Думаю много для себя вынесу из его
                 видосов. Как-то хотелось больше всего написать и раскрыться, но по итогу не лезет в голову ничего, так
-                что всем МИР!
+                что всем МИР! и немного фоток =)
                 <div class="today">12.07.2020</div>
                 <div class="flex__image-box">
                     <img class="finishphoto" src="/images/main/21/finishphoto.jpg" alt="">
