--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,16 @@
             <div class="header__img"></div>
             <h1 class="header__title">Портфолио</h1>
         </div>
-
+        <div class="header__arrow">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
+                <title></title>
+                <g id="icomoon-ignore">
+                </g>
+                <path
+                    d="M438.627 310.627l-160 160c-12.496 12.497-32.757 12.497-45.254 0l-160-160c-12.497-12.497-12.497-32.758 0-45.255s32.758-12.498 45.255 0l105.372 105.373v-306.745c0-17.673 14.327-32 32-32s32 14.327 32 32v306.745l105.373-105.373c6.248-6.248 14.438-9.372 22.627-9.372s16.379 3.124 22.627 9.373c12.497 12.497 12.497 32.757 0 45.254z">
+                </path>
+            </svg>
+        </div>
     </header>
     <div class="main">
         <div class="container">
@@ -50,14 +59,15 @@
 
 
             <div class="portfolio__inner">
-                 <div class="portfolio__item-box">
+                <div class="portfolio__item-box">
 
                     <a href="motivate/index.html" class="portfolio__link" target="_blank">
                         <div class="portfolio-title">Motivate</div>
                         <img src="images/portfolio/motivate.jpg" alt="">
                     </a>
                     <span>
-                       Одна из последних работ, макет брал на просторах телеграм каналов. Адаптивная верстка с использованием "медиа-запросов", без макета для адаптива. Модальное окно при клике на кнопку.
+                        Одна из последних работ, макет брал на просторах телеграм каналов. Адаптивная верстка с
+                        использованием "медиа-запросов", без макета для адаптива. Модальное окно при клике на кнопку.
                     </span>
                 </div>
                 <div class="portfolio__item-box">
@@ -67,7 +77,10 @@
                         <img src="images/portfolio/meatLoft1.jpg" alt="">
                     </a>
                     <span>
-                        Личный проект, в котором пришлось поработать дизайнером. На втором экране слайдера скрин из игры GTA5, для этого скрина пришлось зайти в магазин одежды, выбрать что-то похожее на одежду курьера, потом заказать велосипед в интернет-магазине и поездить по городу поискать подходящий городской пейзаж. Ну это так, немного разнообразия в работе.
+                        Личный проект, в котором пришлось поработать дизайнером. На втором экране слайдера скрин из игры
+                        GTA5, для этого скрина пришлось зайти в магазин одежды, выбрать что-то похожее на одежду
+                        курьера, потом заказать велосипед в интернет-магазине и поездить по городу поискать подходящий
+                        городской пейзаж. Ну это так, немного разнообразия в работе.
                     </span>
                 </div>
                 <div class="portfolio__item-box">
@@ -77,7 +90,10 @@
                         <img src="images/portfolio/feyazub1.jpg" alt="">
                     </a>
                     <span>
-                        Коммерческий проект, сразу после курса верстальщика прошел стажировку в monomoloco-team, ребята доверили несрочный проект, сложность проекта была в собственной CSS библиотеке, так команда ускоряла свою работу в несколько раз, создавая макеты и верстая по собственным сеткам. Интересный опыт.
+                        Коммерческий проект, сразу после курса верстальщика прошел стажировку в monomoloco-team, ребята
+                        доверили несрочный проект, сложность проекта была в собственной CSS библиотеке, так команда
+                        ускоряла свою работу в несколько раз, создавая макеты и верстая по собственным сеткам.
+                        Интересный опыт.
                     </span>
                 </div>
                 <div class="portfolio__item-box">
@@ -87,7 +103,10 @@
                         <img src="images/portfolio/apart1.jpg" alt="">
                     </a>
                     <span>
-                        Данный макет нашел на просторах интернета, в тот момент когда я его верстал, в Figma видно было как еще несколько человек одновременно изучают этот макет, возможно его можно встретить в портфолио не только у меня. Данную верстку "натягивал" на WordPress, в планах квартир использовал fancybox плагин
+                        Данный макет нашел на просторах интернета, в тот момент когда я его верстал, в Figma видно было
+                        как еще несколько человек одновременно изучают этот макет, возможно его можно встретить в
+                        портфолио не только у меня. Данную верстку "натягивал" на WordPress, в планах квартир
+                        использовал fancybox плагин
                     </span>
                 </div>
                 <div class="portfolio__item-box">
@@ -97,9 +116,11 @@
                         <img src="images/portfolio/covid1.jpg" alt="">
                     </a>
                     <span>
-                        Во время карантина хотелось сверстать что-то актуальное, нашел бесплатный макет о COVID-19 сверстал, и в конце сайта подключил статистику со стороннего сервиса, немного анимировал круглые элементы на сайте.
+                        Во время карантина хотелось сверстать что-то актуальное, нашел бесплатный макет о COVID-19
+                        сверстал, и в конце сайта подключил статистику со стороннего сервиса, немного анимировал круглые
+                        элементы на сайте.
                     </span>
-        
+
                 </div>
             </div>
 
@@ -109,7 +130,7 @@
 
 
 
-    
+
     <script src="js/port.js"></script>
 </body>
 
