upd covid-landing(adaptive)

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,9 +52,8 @@
                 <h2>То, что успел</h2>
             </div>
             <span>
-                Здесь я выложу свой опыт, то что я успел сделать за время учебы. Это не учебные проекты, это бесплатные
-                макеты из интернета, один коммерческий проект и собственный проект сделанный в Figma с нуля. Чтож
-                посмотрим . . .
+                Здесь я выложу свой опыт в верстке. Это не учебные проекты, это бесплатные
+                макеты из интернета, один коммерческий проект и собственный проект сделанный в Figma с нуля. Опыт в React проектах доступен по ссылке https://epprosportz.ru/
             </span>
 
 
@@ -85,7 +84,7 @@
                 </div>
                 <div class="portfolio__item-box">
 
-                    <a href="https://osteop.feyazub.ru/" class="portfolio__link" target="_blank">
+                    <a href="https://feyazub.ru/" class="portfolio__link" target="_blank">
                         <div class="portfolio-title">Зубная Фея</div>
                         <img src="images/portfolio/feyazub1.jpg" alt="">
                     </a>
@@ -118,7 +117,7 @@
                     <span>
                         Во время карантина хотелось сверстать что-то актуальное, нашел бесплатный макет о COVID-19
                         сверстал, и в конце сайта подключил статистику со стороннего сервиса, немного анимировал круглые
-                        элементы на сайте.
+                        элементы на сайте. 
                     </span>
 
                 </div>
